// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownButtons /> Render 1`] = `
<div
  className="dropdown df-outer-dropdown"
>
  <div
    className="btn"
    role="group"
  >
    <button
      className="btn btn-default dropdown-toggle"
      onClick={[Function]}
      type="button"
    >
      <span>
        Save
      </span>
      <span
        style={
          Object {
            "paddingLeft": "5px",
          }
        }
      >
        <i
          className="fa fa-caret-down"
        />
      </span>
    </button>
    <ul
      className="dropdown-menu df-dropdown"
    >
      <li
        className="df-dropdown-option "
      >
        <a
          style={
            Object {
              "padding": "0px 5px",
            }
          }
        >
          <button
            onClick={[MockFunction]}
          >
            Single Button
          </button>
        </a>
      </li>
      <li
        className="df-dropdown-option "
      >
        <div
          className="dropdown df-sub-dropdown"
        >
          <div
            className=""
            role="group"
          >
            <button
              onClick={[Function]}
              type="button"
            >
              <span>
                Nest
              </span>
              <span
                style={
                  Object {
                    "paddingLeft": "5px",
                  }
                }
              >
                <i
                  className="fa fa-caret-right"
                />
              </span>
            </button>
            <ul
              className="dropdown-menu df-dropdown"
              style={Object {}}
            >
              <li
                className="df-dropdown-option "
              >
                <a
                  href="#"
                  style={
                    Object {
                      "marginLeft": "20px",
                      "padding": "0px 5px",
                    }
                  }
                >
                  <button
                    onClick={[Function]}
                  >
                    egg1
                  </button>
                </a>
              </li>
              <li
                className="df-dropdown-option "
              >
                <div
                  className="dropdown df-sub-dropdown"
                >
                  <div
                    className=""
                    role="group"
                  >
                    <button
                      onClick={[Function]}
                      type="button"
                    >
                      <span>
                        another nest
                      </span>
                      <span
                        style={
                          Object {
                            "paddingLeft": "5px",
                          }
                        }
                      >
                        <i
                          className="fa fa-caret-right"
                        />
                      </span>
                    </button>
                    <ul
                      className="dropdown-menu df-dropdown"
                      style={Object {}}
                    >
                      <li
                        className="df-dropdown-option "
                      >
                        <a
                          style={
                            Object {
                              "marginLeft": "20px",
                              "padding": "0px 5px",
                            }
                          }
                        >
                          <button
                            onClick={[MockFunction]}
                          >
                            super nested egg
                          </button>
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </li>
              <li
                className="df-dropdown-option "
              >
                <a
                  style={
                    Object {
                      "marginLeft": "20px",
                      "padding": "0px 5px",
                    }
                  }
                >
                  <button
                    onClick={[Function]}
                  >
                    egg2
                  </button>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<InnerDropdownButtons /> Render 1`] = `
<div
  className="dropdown df-sub-dropdown"
>
  <div
    className=""
    role="group"
  >
    <button
      onClick={[Function]}
      type="button"
    >
      <span>
        test
      </span>
      <span
        style={
          Object {
            "paddingLeft": "5px",
          }
        }
      >
        <i
          className="fa fa-caret-right"
        />
      </span>
    </button>
    <ul
      className="dropdown-menu df-dropdown"
      style={Object {}}
    >
      <li
        className="df-dropdown-option "
      >
        <a
          style={
            Object {
              "marginLeft": "20px",
              "padding": "0px 5px",
            }
          }
        >
          <button
            onClick={[Function]}
          >
            option1
          </button>
        </a>
      </li>
      <li
        className="df-dropdown-option "
      >
        <div
          className="dropdown df-sub-dropdown"
        >
          <div
            className=""
            role="group"
          >
            <button
              onClick={[Function]}
              type="button"
            >
              <span>
                option2
              </span>
              <span
                style={
                  Object {
                    "paddingLeft": "5px",
                  }
                }
              >
                <i
                  className="fa fa-caret-right"
                />
              </span>
            </button>
            <ul
              className="dropdown-menu df-dropdown"
              style={Object {}}
            >
              <li
                className="df-dropdown-option "
              >
                <a
                  style={
                    Object {
                      "marginLeft": "20px",
                      "padding": "0px 5px",
                    }
                  }
                >
                  <button
                    onClick={[Function]}
                  >
                    option3
                  </button>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<OuterDropdownButtons /> Render 1`] = `
<div
  className="dropdown df-outer-dropdown"
>
  <div
    className="btn"
    role="group"
  >
    <button
      className="btn btn-default dropdown-toggle"
      onClick={[Function]}
      type="button"
    >
      <span>
        Test
      </span>
      <span
        style={
          Object {
            "paddingLeft": "5px",
          }
        }
      >
        <i
          className="fa fa-caret-down"
        />
      </span>
    </button>
    <div
      id="test-div"
    />
  </div>
</div>
`;

exports[`<SaveDropdown /> enabled to disabled 1`] = `
<Component
  disableSave={true}
  save={[MockFunction]}
  saveAs={[MockFunction]}
>
  <Component
    buttonData={
      Array [
        Object {
          "action": [MockFunction],
          "disabled": true,
          "label": "Save",
        },
        Object {
          "action": [MockFunction],
          "disabled": false,
          "label": "Save As",
        },
      ]
    }
    title="Save"
  >
    <div
      className="dropdown"
      style={
        Object {
          "display": "inline-block",
          "margin": "5px",
        }
      }
    >
      <div
        className="btn df-dropdown-button"
        role="group"
      >
        <button
          aria-expanded="true"
          aria-haspopup="true"
          className="btn btn-default dropdown-toggle"
          data-toggle="dropdown"
          id="Save-participant-group-btn"
          type="button"
        >
          <span>
            Save
          </span>
          <span
            style={
              Object {
                "paddingLeft": "5px",
              }
            }
          >
            <i
              className="fa fa-caret-down"
            />
          </span>
        </button>
        <ul
          aria-labelledby="button-Save"
          className="dropdown-menu df-dropdown"
        >
          <li
            className="disabled"
            key="Save"
          >
            <a
              href="#"
              id="Save-link"
              key="Save"
              onClick={[MockFunction]}
            >
              Save
            </a>
          </li>
          <li
            className=""
            key="Save As"
          >
            <a
              href="#"
              id="Save-As-link"
              key="Save As"
              onClick={[MockFunction]}
            >
              Save As
            </a>
          </li>
        </ul>
      </div>
    </div>
  </Component>
</Component>
`;
